# Procure-to-Pay

./: .env.example  .gitignore  Dockerfile  README.md  SUBMISSION.md  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml  reset_db.py  test_api_workflow.sh
.github/workflows/: deploy.yml
backend/: DEPLOYMENT.md  README.md  SECURITY.md  build.sh  demo.sh  main.py  pyproject.toml  run_backend_tests.py  test_approval_workflow.py
backend/authentication/: models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_remove_userprofile_created_at_userprofile_department.py
backend/core/: settings.py  urls.py
backend/procurement/: document_processor.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/procurement/management/: __init__.py
backend/procurement/migrations/: 0001_initial.py  0002_alter_purchaserequest_options_and_more.py  0003_add_po_generated_at.py
backend/procurement/tests/: test_ai_processing.py  test_integration.py  test_models.py  test_serializers.py  test_views.py
core/: settings.py  urls.py
frontend/: .env.example  .gitignore  README.md  deploy.sh  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Navbar.tsx  (+1 more)
procurement/: admin.py  document_processor.py  models.py  serializers.py  urls.py  views.py
procurement/migrations/: 0001_initial.py  0002_purchaserequest_department_and_more.py
procurement/tests/: __init__.py  test_integration.py  test_models.py  test_serializers.py
(+10 files in other folders)
